--- a/indexnuevo.html
+++ b/indexnuevo.html
@@ -12,14 +12,15 @@
 </head>
 <body>
     <section id="section-navegador">
-        <nav id="navegador" style="display: flex;">
+        <div id="nav-trigger"></div>
+        <nav id="navegador">
             <ul>
                 <li><a href="indexnuevo.html"><img src="/images/iso-solo.svg" alt="tata logo"></a></li>
                 <!-- <li><a href="indexnuevo.html">Inicio</a></li> -->
                 <li><a href="indexnuevo.html#info-programacion">Programación</a></li>
                 <li><a href="indexnuevo.html#info-entradas">Entradas</a></li>
-                <li><a href="sedes.html#sedes">Sedes</a></li>
-                <li><a href="sedes.html#obras">Obras</a></li>
+                <li><a href="obras-y-sedes.html#obras">Obras</a></li>
+                <li><a href="obras-y-sedes.html#sedes">Sedes</a></li>
                 <li><a href="nosotros.html">Nosotres</a></li>
                 <li><a href="nosotros.html#quienes-somos">Sumate</a></li>
                 <li><a href="https://www.instagram.com/tata_piriri/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
@@ -59,7 +60,7 @@
     </section>
 
     <section id="info-programacion">
-        <h1>Programación</h1>
+        <h2>Programación</h2>
     </section>
 
     <section id="info-entradas">
@@ -74,33 +75,6 @@
                         <div class="section d-flex justify-content-center entradas-tickets">
                             <input class="checkbox-ticket" type="radio" name="ticket" id="ticket-1">
                             <label for="ticket-1">
-                                <span class="top-dots">
-                                    <span class="section dots">
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                    </span>
-                                </span>
                                 <img src="/images/iso-solo.svg" alt="tata">
                                 <span class="duration">
                                     Entrada General
@@ -108,94 +82,12 @@
                                 <span class="price mt-2 pb-4 mb-3">
                                     <sup>$</sup>8000
                                 </span>
-                                <span class="section dots">
-                                    <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                </span>
-                                <span class="section pt-4">
-                                    <i class='uil uil-clock-two mt-3'></i>
-                                </span>
                                 <span class="time mt-2">
                                     Sala del Círculo Médico - Eldorado
-                                </span>
-                                <span class="bottom-dots">
-                                    <span class="section dots">
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                    </span>
                                 </span>
                             </label><!--
                             --><input class="checkbox-ticket" type="radio" name="ticket" id="ticket-2">
                             <label for="ticket-2">
-                                <span class="top-dots">
-                                    <span class="section dots">
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                    </span>
-                                </span>
                                 <img src="/images/iso-solo.svg" alt="tata">
                                 <span class="duration">
                                     Jubilados y Estudiantes
@@ -203,94 +95,12 @@
                                 <span class="price mt-2 pb-4 mb-3">
                                     <sup>$</sup>6000
                                 </span>
-                                <span class="section dots">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                </span>
-                                <span class="section pt-4">
-                                    <i class='uil uil-clock-two mt-3'></i>
-                                </span>
                                 <span class="time mt-2">
                                     Sala del Círculo Médico - Eldorado
-                                </span>
-                                <span class="bottom-dots">
-                                    <span class="section dots">
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                    </span>
                                 </span>
                             </label><!--
                             --><input class="checkbox-ticket" type="radio" name="ticket" id="ticket-3">
                             <label for="ticket-3">
-                                <span class="top-dots">
-                                    <span class="section dots">
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                    </span>
-                                </span>
                                 <img src="/images/iso-solo.svg" alt="tata">
                                 <span class="duration">
                                     Estudiantes con <span>bono</span>
@@ -298,63 +108,8 @@
                                 <span class="price mt-2 pb-4 mb-3">
                                     <sup>$</sup>4000
                                 </span>
-                                <span class="section dots">
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                    <span></span>
-                                </span>
-                                <span class="section pt-4">
-                                    <i class='uil uil-clock-two mt-3'></i>
-                                </span>
                                 <span class="time mt-2">
                                     Sala del Círculo Médico - Eldorado
-                                </span>
-                                <span class="bottom-dots">
-                                    <span class="section dots">
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                    </span>
                                 </span>
                             </label>
                             <div class="w-100"></div>
@@ -373,12 +128,12 @@
 
     <section id="info-sedes">
         <!-- <h1>Sedes</h1> -->
-        <a href="sedes.html">
+        <a href="obras-y-sedes.html#sedes">
             <div class="card-horizontal d-flex">
                 <img src="/assets/img/Misiones-Mapa.png" alt="Mapa">
                 <div class="d-flex flex-column">
                     <h5>Estiramos los brazos para llegar bien lejos!</h5>
-                    <h3>Las sedes del festival</h3>
+                    <h2>Las sedes del festival</h2>
                     <p>Hacé click para ver todas las sedes</p>
                 </div>
             </div>
@@ -416,7 +171,11 @@
     </footer>
 
     <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script>
-    <script src="js/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
+    <!-- <script src="js/gsap.min.js"></script> -->
     <script src="js/custom.js"></script>
 
 </body>
