--- a/nosotros.html
+++ b/nosotros.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <section id="section-navegador">
-        <nav id="navegador" style="display: flex;">
+        <nav id="navegador">
             <ul>
                 <li><a href="indexnuevo.html"><img src="/images/iso-solo.svg" alt="tata logo"></a></li>
                 <!-- <li><a href="indexnuevo.html">Inicio</a></li> -->
                 <li><a href="indexnuevo.html#info-programacion">Programación</a></li>
                 <li><a href="indexnuevo.html#info-entradas">Entradas</a></li>
-                <li><a href="sedes.html#sedes">Sedes</a></li>
-                <li><a href="sedes.html#obras">Obras</a></li>
+                <li><a href="obras-y-sedes.html#obras">Obras</a></li>
+                <li><a href="obras-y-sedes.html#sedes">Sedes</a></li>
                 <li><a href="nosotros.html">Nosotres</a></li>
                 <li><a href="nosotros.html#quienes-somos">Sumate</a></li>
                 <li><a href="https://www.instagram.com/tata_piriri/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
@@ -31,5 +31,42 @@
     <section id="quienes-somos">
         <h1>Nosotros</h1>
     </section>
+    <footer class="d-flex justify-content-between">
+        <div class="d-flex">
+            <div class="item-footer">
+                <div>
+                    <p class="px-1">Estamos creciendo todos los años un poco más. Si querés sumarte al festival podés <br>
+                        <a class="px-3 py-2" href="#inicio"><i class="fa-regular fa-envelope px-1"></i> Escribirnos</a>
+                    </p>
+                </div>
+            </div>
+            <div class="item-footer">
+                <div class="d-flex flex-column">
+                    <a class="px-1 mb-1" href="#inicio">Grupos y espectáculos</a>
+                    <a class="px-1 mb-1" href="#inicio">Quienes somos</a>
+                    <a class="px-1 mb-1" href="#inicio">Más festivales</a>
+                    <a class="px-1 mb-1" href="#inicio">Agradecimientos</a>
+                    <p class="px-1 mb-1">Por el momento, las entradas virtuales las vendemos por Whatsapp.</p>
+                </div>
+            </div>
+        </div>
+        <div id="int" class="d-flex flex-column flex-wrap justify-content-between">
+            <div class="d-flex align-items-start justify-content-center flex-column">
+                <p class="px-1">
+                    Este festival cuenta con el apoyo del
+                </p>
+                <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
+            </div>
+            <a class="prueba-gsap px-3 py-2" href="#inicio"><i class="fa-solid fa-angles-up px-1"></i></a>
+        </div>
+    </footer>
+
+    <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script>
+    <script src="https://unpkg.com/split-type"></script>
+    <!-- <script src="js/gsap.min.js"></script> -->
+    <script src="js/custom.js"></script>
 </body>
 </html>
