--- a/index-dev.html
+++ b/index-dev.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festival de Títeres</title>
     <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <link rel="stylesheet" href="/css/css/bootstrap-grid.css">
+    <!-- <link rel="stylesheet" href="/css/css/bootstrap-grid.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link rel="stylesheet" href="/css/css/bootstrap-grid.css.map"> -->
     <!-- <link rel="stylesheet" href="/css/css/bootstrap-grid.min.css"> -->
@@ -186,9 +186,9 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script> -->
-    <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script>
+    <!-- <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script> -->
     <script src="https://unpkg.com/split-type"></script>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/js/main.js"></script>
     
 
 </body>
