--- a/form.html
+++ b/form.html
@@ -72,7 +72,7 @@
                 
                 <!-- <p>Adjuntá los archivos</p> -->
                 <p class="custom-file-container" data-upload-id="file-upload"></p>
-                <input type="file" id="archivo" name="archivo" multiple required />
+                <!-- <input type="file" id="archivo" name="archivo" multiple required /> este es una etiqueta que funciona pero no ideal-->
                 <p>
                     <label>Si querés comentarnos algo más <textarea name="message"></textarea></label>
                 </p>
