--- a/form.html
+++ b/form.html
@@ -72,8 +72,15 @@
                 
                 <!-- <p>Adjuntá los archivos</p> -->
                 <p class="custom-file-container" data-upload-id="file-upload"></p>
-                <!-- <input type="file" id="archivo" name="archivo" multiple required /> este es una etiqueta que funciona pero no ideal-->
-                <p>
+             <!-- <input 
+          type="file" 
+          id="archivo" 
+          name="archivo[]" 
+          multiple 
+          required 
+          accept=".jpg, .png, .pdf, .docx, .xlsx" 
+       este es una etiqueta que funciona pero no ideal en cuanto css- -->
+         <p>
                     <label>Si querés comentarnos algo más <textarea name="message"></textarea></label>
                 </p>
                 <div class="d-flex flex-column gap-3 justify-content-center align-items-center div-enviar">
