--- a/form.html
+++ b/form.html
@@ -138,6 +138,7 @@
     <!-- <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script> -->
     <script src="https://unpkg.com/split-type"></script>
     <script type="module" src="./src/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/file-upload-with-preview@5.0.2/dist/file-upload-with-preview.min.js"></script>
     
 </body>
 </html>
