--- a/form.html
+++ b/form.html
@@ -71,7 +71,7 @@
                 </p>
                 
                 <!-- <p>Adjuntá los archivos</p> -->
-                <div class="custom-file-container" data-upload-id="file-upload"></div>
+                <p class="custom-file-container" data-upload-id="file-upload"></p>
                     
                 <!-- Input oculto para Netlify -->
                 <input type="hidden" id="hidden-file-input" name="archivo[]" /><p>
