--- a/form.html
+++ b/form.html
@@ -85,7 +85,7 @@
                         Vamos a procesar el datos y comunicarnos con el referente lo antes posible.
                     </span>
                     <p class="btn-enviar">
-                       <button type="submit" id="btn-transicion" onclick="enviarformulario()">
+                       <button type="submit" id="btn-transicion">
                             <span class="text">ENVIAR</span>
                             <span>¡Gracias por participar!</span>
                         </button>
