--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <!-- <link rel="stylesheet" href="/css/css/bootstrap-grid.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+   
 </head>
 <body>
     <section id="top"></section>
@@ -36,7 +36,7 @@
             <div id="form-contacto">
                 <h2>¡Sumate al festi!</h2>
                 <!-- ACA VOY A ENVIAR DIRECTAMENTE AL BACKEND DE SENDGRID -->
-                <form id="contact-form">
+                <form name="contact">
                 <!--PARA USAR EN NETLIFY <form name="contact" method="POST" data-netlify="true" enctype="multipart/form-data" action="#">
                     <input type="hidden" name="form-name" value="contact"> -->
                 <p>
@@ -139,6 +139,7 @@
     <!-- <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script> -->
     <script src="https://unpkg.com/split-type"></script>
     <script type="module" src="./src/js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     
 
     
